# silence-core

./: .dependency-cruiser.js  .gitignore  .vercelignore  AGENTS.md  Brand Essence & Positioning Soft‑Noir (Hard Laws).md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MVP-SPLIT-SPECIFICATION.md  README.md  ROOT-ANCHOR-FILES.md  SECURITY.md  SHA256SUMS.txt  SILENCE-BRAND-BOOK-LITE.md  SILENCE-FRONTEND-ARCHITECTURE(1).md  SILENCE-FRONTEND-ARCHITECTURE.md  TOPOLOGY-CONSOLIDATION.md  audit-trail.schema.json  eas.json  kod1.docx  kod2.md  kod3.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  protokol_eliminacji_redundancji_senior_dev_edition.md  s-init-monorepo.sh  s-post-impl-check.sh  turbo.json  vercel.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  compliance.yaml  dependabot.yml
00_inbox/: fix-governance-doc-flow.sh  fix-remote-origin.sh
01_governance/: AGENTS.md  ANCHOR_FILE_AUDIT_REPORT.md  AUDIT-EXACT-MATCH-GAP-MATRIX.md  AUDIT-EXACT-MATCH-MVP-ARTEFACTS.md  AUDIT-EXACT-MATCH-REMEDIATION-PLAN.md  AUDIT_LOG.md  AUDIT_REMEDIATION_PLAN_v1.0.md  BEHAVIORAL_CLUSTERS.md  DEPLOYMENT-CONFIG-MATRIX.md  (+33 more)
04_packages/@silence/engine/: Cargo.toml  Dockerfile  README.md  package.json
04_packages/@silence/engine/.github/workflows/: engine-build.yml
04_packages/@silence/engine/01_governance/RELEASE_KEYS/: engine-signing-key.pem  engine-signing-key.pub
04_packages/@silence/engine/scripts/: sign-engine.sh
04_packages/@silence/engine/src/: hash.rs  index.ts  lib.rs  wasm.rs
04_packages/@silence/engine/tests/: equivalence.rs
(+753 files in other folders)
