[package]
name = "silence-engine"
version = "0.1.0-mvp"
authors = ["silence-architect <architect@silence.objects>"]
edition = "2021"
resolver = "2"
description = "Deterministic behavioral scheduler for SILENCE.OBJECTS — CPU-only, phi-derived timing, no ML"
license = "MIT"
repository = "https://github.com/silence-objects/silence"

[dependencies]
# Pinned exact versions — no caret/tilde in MVP. Cargo.lock is SSoT.
sha2 = "=0.10.8"
wasm-bindgen = { version = "=0.2.92", optional = true }
js-sys = { version = "=0.3.69", optional = true }
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = { version = "=1.0.117", optional = true }

[features]
default = ["native"]
native = ["serde_json", "std"]
wasm = ["wasm-bindgen", "js-sys", "serde_json"]
std = []

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "unwind"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "silence_engine"
path = "src/lib.rs"

[[bin]]
name = "engine-cli"
path = "src/bin/engine-cli.rs"
